# Research-Briefing-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: PROJECT_THINKING.md
research_briefing_agent/: __init__.py  brief.py  cli.py  config.py  evidence.py  exporters.py  llm.py  models.py  modes.py  quality.py  renderer.py  sources.py
tests/: __init__.py  test_brief.py
